--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -457,6 +457,7 @@ footer {
 .social-links li {
   margin-right: 20px;
   list-style: none;
+  padding: 10px 0;
 }
 .footer-nav li:last-child,
 .social-links li:last-child {
